# MEng_thesis

create_data_set/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
create_data_set/src/: save_data.cpp
mythesis_body/: CMakeLists.txt~  create_human_model.cpp  create_human_model_ba_khundan az_kinect.cpp  document_v1_8_8_93  package.xml~
mythesis_body/src/: calc_features.h~  collaborativeFeatures.txt  walking2Features.txt
mythesis_body/src/model_uniform/: first_shot.pcd  third_shot.pcd
mythesis_body/src/model_uniform/uniform_0.0005/: key_point.pcd
mythesis_body/src/skeleton/: body_features.cpp  calc_features.cpp  calc_features.h  calc_features.h~  calc_rank_1__activity_database.cpp  testSkeletonFeaturesOnDataset.cpp
mythesis_body/src/vfh/: PLY_TO_PCD.cpp  collaborativeFeatures.txt  createModelFromDataSet.cpp  create_human_model.cpp  create_vfh_model.cpp  create_vfh_model_2.cpp  main_ground_based_people_detection.cpp  pcl_object_recognition.hpp  ply2pcd.cpp  plyTwoPly.cpp  ply_parser.h  testVFHOnDatasetRank_1.cpp  testVFHOnDatasetRank_K.cpp  training_data_vfh_pcd.list  walking2Features.txt
rgbd_to_oni/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
rgbd_to_oni/src/: MyImage.cpp  MyImage.h  MyKinect.cpp  MyKinect.h  MyKinect.h~  SamplesConfig.xml  convert_oni_to_pcd.cpp  convert_rgbd_to_oni.cpp  convert_rgbd_to_oni_worksForDepth.cpp  convet_rgbd_to_oni_rgbanddepth.cpp  documentForcodes  documentForcodes~  main.cpp  recordONIFile.cpp  show_pcd_files.cpp
thesis_skeleton_face/: CMakeLists.txt  CMakeLists.txt~  document_14_8  document_14_8~  package.xml  skeleton_face.cpp  skeleton_face_16_features  skeleton_face_feature16  skeleton_percentage  skeleton_percentage~
thesis_skeleton_face/src/: FindMe.cpp  FindMe.h  Settings.cpp  activityAllFeatures_percentage_withFindme.txt  activityFirstFeatures.txt  calc_features.cpp  calc_features.h  findme.cpp  readDataSet.cpp  readDataSet.h  skeleton_face.cpp  skeleton_face_ba_findMe.cpp  test1_dadahaye_train_vijegi
